--- a/EventsManager/MoreInfo.xaml
+++ b/EventsManager/MoreInfo.xaml
@@ -23,15 +23,16 @@
         </Grid.RowDefinitions>
         <TextBlock Margin="10" HorizontalAlignment="Right" VerticalAlignment="Center" FontWeight="Bold" FontSize="16">Название:</TextBlock>
         <TextBox Text="{Binding Path=Name}"  Name="textBoxName" Grid.Column="1" Margin="10" HorizontalAlignment="Stretch" VerticalAlignment="Center" Focusable="False"/>
-        <TextBlock Grid.Row="1" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Center" FontWeight="Bold" FontSize="16">Город:</TextBlock>
-        <TextBox Text="{Binding Path=Location}" Name="textBoxLocation" Grid.Row="1" Grid.Column="1" Margin="10" HorizontalAlignment="Stretch" VerticalAlignment="Center" Focusable="False"></TextBox>
+        <TextBlock Grid.Row="1" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Center" FontWeight="Bold" FontSize="16">Город и дата:</TextBlock>
+        <TextBox Text="{Binding Path=Location}" Name="textBoxLocation" Grid.Row="1" Grid.Column="1" Margin="10 10 120 10" HorizontalAlignment="Stretch" VerticalAlignment="Center" Focusable="False"></TextBox>
+        <TextBox ToolTip="день.месяц.год"  Name="textBoxDate" Focusable="False" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Width="100" Margin="10" TextChanged="textBoxDate_TextChanged"></TextBox>
         <TextBlock Grid.Row="2" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Center" FontWeight="Bold" FontSize="16">Цена:</TextBlock>
         <TextBox Text="{Binding Path=Price}" Name="textBoxPrice" Grid.Row="2" Grid.Column="1" Margin="10" HorizontalAlignment="Stretch" VerticalAlignment="Center" Focusable="False"></TextBox>
         <TextBlock Grid.Row="3" Margin="0 15 10 0" HorizontalAlignment="Right"  FontWeight="Bold" FontSize="16">Описание:</TextBlock>
         <TextBox Text="{Binding Path=Descirption}" TextWrapping="Wrap" Name="textBoxDescription" Grid.Row="3" Grid.Column="1" Margin="10 15 10 10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Focusable="False"></TextBox>
         <TextBlock Margin="10" HorizontalAlignment="Right" VerticalAlignment="Center" FontWeight="Bold" FontSize="16"  Grid.Row="4">Категория</TextBlock>
         <TextBox  Text="{Binding Path=Category.TypeCategory}" Grid.Column="1" Grid.Row="4" TextWrapping="Wrap" Name="textBoxCategory" VerticalAlignment="Center" Margin="10" HorizontalAlignment="Stretch" Focusable="False"></TextBox>
-        <Button Name="btnEdit" Grid.Row="5" Grid.Column="1" Height="25" Width="100" HorizontalAlignment="Right" Margin="10 10 100 10" Click="btnEdit_Click">Изменить</Button>
+        <Button Name="btnEdit" IsEnabled="True" ToolTip="Доступно только зарегистрированным пользователям." Grid.Row="5" Grid.Column="1" Height="25" Width="100" HorizontalAlignment="Right" Margin="10 10 100 10" Click="btnEdit_Click">Изменить</Button>
         <Button Name="btnReady" Grid.Row="5" Grid.Column="1" Height="25" Width="75" Margin="10" HorizontalAlignment="Right" IsEnabled="False" Click="btnReady_Click">Готово</Button>
     </Grid>
 </Window>
