--- a/EventsManager/NewEventWindow.xaml
+++ b/EventsManager/NewEventWindow.xaml
@@ -22,17 +22,16 @@
         </Grid.RowDefinitions>
         <TextBlock Margin="10" HorizontalAlignment="Right" VerticalAlignment="Center" FontWeight="Bold" FontSize="16">Название:</TextBlock>
         <TextBox TextWrapping="Wrap" Name="textBoxName" Grid.Column="1" Margin="10" HorizontalAlignment="Stretch" VerticalAlignment="Center"></TextBox>
-        <TextBlock Grid.Row="1" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Center" FontWeight="Bold" FontSize="16">Город:</TextBlock>
-        <TextBox TextWrapping="Wrap" Name="textBoxLocation" Grid.Row="1" Grid.Column="1" Margin="10" HorizontalAlignment="Stretch" VerticalAlignment="Center"></TextBox>
+        <TextBlock Grid.Row="1" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Center" FontWeight="Bold" FontSize="16">Город и дата:</TextBlock>
+        <TextBox TextWrapping="Wrap" Name="textBoxLocation" Grid.Row="1" Grid.Column="1" Margin="10 10 120 10" HorizontalAlignment="Stretch"  VerticalAlignment="Center"></TextBox>
         <TextBlock Grid.Row="2" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Center" FontWeight="Bold" FontSize="16">Цена:</TextBlock>
         <TextBox TextWrapping="Wrap" Name="textBoxPrice" Grid.Row="2" Grid.Column="1" Margin="10" HorizontalAlignment="Stretch" VerticalAlignment="Center"></TextBox>
         <TextBlock Grid.Row="3" Margin="0 15 10 0" HorizontalAlignment="Right"  FontWeight="Bold" FontSize="16">Описание:</TextBlock>
         <TextBox ToolTip="Данное поле необязательно к заполнению." TextWrapping="Wrap" Name="textBoxDescription" Grid.Row="3" Grid.Column="1" Margin="10 15 10 10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"></TextBox>
         <Button Name="btnAddNew" Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Width="100" Margin="5" HorizontalAlignment="Center" Click="btnAddNew_Click">Добавить</Button>
         <TextBlock Margin="10" HorizontalAlignment="Right" VerticalAlignment="Center" FontWeight="Bold" FontSize="16"  Grid.Row="4">Категория</TextBlock>
-
         <TextBox  Grid.Column="1" Grid.Row="4" TextWrapping="Wrap" Name="textBoxCategory" VerticalAlignment="Center" Margin="10 10 120 10" HorizontalAlignment="Stretch"></TextBox>
         <ComboBox Name="comboBoxCategories" DisplayMemberPath="TypeCategory"  Grid.Column="1" Grid.Row="4" HorizontalAlignment="Right" Width="100" Height="20" Margin="10" ></ComboBox>
-        
+        <DatePicker Name="datePicker" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="10" Grid.Column="1"></DatePicker>
     </Grid>
 </Window>
