--- a/EventsManager/MoreInfo.xaml
+++ b/EventsManager/MoreInfo.xaml
@@ -25,7 +25,7 @@
         <TextBox Text="{Binding Path=Name}"  Name="textBoxName" Grid.Column="1" Margin="10" HorizontalAlignment="Stretch" VerticalAlignment="Center" Focusable="False"/>
         <TextBlock Grid.Row="1" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Center" FontWeight="Bold" FontSize="16">Город и дата:</TextBlock>
         <TextBox Text="{Binding Path=Location}" Name="textBoxLocation" Grid.Row="1" Grid.Column="1" Margin="10 10 120 10" HorizontalAlignment="Stretch" VerticalAlignment="Center" Focusable="False"></TextBox>
-        <TextBox ToolTip="день.месяц.год"  Name="textBoxDate" Focusable="False" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Width="100" Margin="10" TextChanged="textBoxDate_TextChanged"></TextBox>
+        <TextBox ToolTip="день.месяц.год"  Name="textBoxDate" Focusable="False" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Width="100" Margin="10"></TextBox>
         <TextBlock Grid.Row="2" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Center" FontWeight="Bold" FontSize="16">Цена:</TextBlock>
         <TextBox Text="{Binding Path=Price}" Name="textBoxPrice" Grid.Row="2" Grid.Column="1" Margin="10" HorizontalAlignment="Stretch" VerticalAlignment="Center" Focusable="False"></TextBox>
         <TextBlock Grid.Row="3" Margin="0 15 10 0" HorizontalAlignment="Right"  FontWeight="Bold" FontSize="16">Описание:</TextBlock>
