--- a/EventsManager/MoreInfo.xaml
+++ b/EventsManager/MoreInfo.xaml
@@ -9,8 +9,8 @@
     <Grid>
 
         <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="150"></ColumnDefinition>
-        <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition Width="150"></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
@@ -19,20 +19,67 @@
             <RowDefinition Height="60"></RowDefinition>
             <RowDefinition></RowDefinition>
             <RowDefinition Height="60"></RowDefinition>
-            <RowDefinition Height="60"></RowDefinition>
+            <RowDefinition Height="50"></RowDefinition>
         </Grid.RowDefinitions>
-        <TextBlock Margin="10" HorizontalAlignment="Right" VerticalAlignment="Center" FontWeight="Bold" FontSize="16">Название:</TextBlock>
-        <TextBox Text="{Binding Path=Name}"  Name="textBoxName" Grid.Column="1" Margin="10" HorizontalAlignment="Stretch" VerticalAlignment="Center" Focusable="False"/>
-        <TextBlock Grid.Row="1" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Center" FontWeight="Bold" FontSize="16">Город и дата:</TextBlock>
-        <TextBox Text="{Binding Path=Location}" Name="textBoxLocation" Grid.Row="1" Grid.Column="1" Margin="10 10 120 10" HorizontalAlignment="Stretch" VerticalAlignment="Center" Focusable="False"></TextBox>
-        <TextBox ToolTip="день.месяц.год"  Name="textBoxDate" Focusable="False" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Width="100" Margin="10"></TextBox>
-        <TextBlock Grid.Row="2" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Center" FontWeight="Bold" FontSize="16">Цена:</TextBlock>
-        <TextBox Text="{Binding Path=Price}" Name="textBoxPrice" Grid.Row="2" Grid.Column="1" Margin="10" HorizontalAlignment="Stretch" VerticalAlignment="Center" Focusable="False"></TextBox>
-        <TextBlock Grid.Row="3" Margin="0 15 10 0" HorizontalAlignment="Right"  FontWeight="Bold" FontSize="16">Описание:</TextBlock>
-        <TextBox Text="{Binding Path=Descirption}" TextWrapping="Wrap" Name="textBoxDescription" Grid.Row="3" Grid.Column="1" Margin="10 15 10 10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Focusable="False"></TextBox>
-        <TextBlock Margin="10" HorizontalAlignment="Right" VerticalAlignment="Center" FontWeight="Bold" FontSize="16"  Grid.Row="4">Категория</TextBlock>
-        <TextBox  Text="{Binding Path=Category.TypeCategory}" Grid.Column="1" Grid.Row="4" TextWrapping="Wrap" Name="textBoxCategory" VerticalAlignment="Center" Margin="10" HorizontalAlignment="Stretch" Focusable="False"></TextBox>
-        <Button Name="btnEdit" IsEnabled="True" ToolTip="Доступно только зарегистрированным пользователям." Grid.Row="5" Grid.Column="1" Height="25" Width="100" HorizontalAlignment="Right" Margin="10 10 100 10" Click="btnEdit_Click">Изменить</Button>
-        <Button Name="btnReady" Grid.Row="5" Grid.Column="1" Height="25" Width="75" Margin="10" HorizontalAlignment="Right" IsEnabled="False" Click="btnReady_Click">Готово</Button>
+        <TextBlock Margin="10" HorizontalAlignment="Right" VerticalAlignment="Center" FontWeight="Bold" FontSize="16" FontFamily="Segoe Print" Foreground="#FF0F1480">Название:</TextBlock>
+        <TextBox Text="{Binding Path=Name}"  Name="textBoxName" Grid.Column="1" Margin="10" HorizontalAlignment="Stretch" VerticalAlignment="Center" Focusable="False" FontFamily="Segoe Print"/>
+        <TextBlock Grid.Row="1" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Center" FontWeight="Bold" FontSize="16" FontFamily="Segoe Print" Foreground="#FF0F1480">Город и дата:</TextBlock>
+        <TextBox Text="{Binding Path=Location}" Name="textBoxLocation" Grid.Row="1" Grid.Column="1" Margin="10 10 120 10" HorizontalAlignment="Stretch" VerticalAlignment="Center" Focusable="False" FontFamily="Segoe Print"></TextBox>
+        <TextBox ToolTip="день.месяц.год"  Name="textBoxDate" Focusable="False" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Width="100" Margin="10" FontFamily="Segoe Print"></TextBox>
+        <TextBlock Grid.Row="2" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Center" FontWeight="Bold" FontSize="16" FontFamily="Segoe Print" Foreground="#FF0F1480">Цена:</TextBlock>
+        <TextBox Text="{Binding Path=Price}" Name="textBoxPrice" Grid.Row="2" Grid.Column="1" Margin="10" HorizontalAlignment="Stretch" VerticalAlignment="Center" Focusable="False" FontFamily="Segoe Print"></TextBox>
+        <TextBlock Grid.Row="3" Margin="0 15 10 0" HorizontalAlignment="Right"  FontWeight="Bold" FontSize="16" FontFamily="Segoe Print" Foreground="#FF0F1480">Описание:</TextBlock>
+        <TextBox Text="{Binding Path=Descirption}" TextWrapping="Wrap" Name="textBoxDescription" Grid.Row="3" Grid.Column="1" Margin="10 15 10 10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Focusable="False" FontFamily="Segoe Print"></TextBox>
+        <TextBlock Margin="10" HorizontalAlignment="Right" VerticalAlignment="Center" FontWeight="Bold" FontSize="16"  Grid.Row="4" FontFamily="Segoe Print" Foreground="#FF0F1480">Категория</TextBlock>
+        <TextBox  Text="{Binding Path=Category.TypeCategory}" Grid.Column="1" Grid.Row="4" TextWrapping="Wrap" Name="textBoxCategory" VerticalAlignment="Center" Margin="10" HorizontalAlignment="Stretch" Focusable="False" FontFamily="Segoe Print"></TextBox>
+        <Button Name="btnEdit" Grid.Row="5" HorizontalAlignment="Left" Grid.ColumnSpan="2"  IsEnabled="True" ToolTip="Доступно только зарегистрированным пользователям." Click="btnEdit_Click" VerticalAlignment="Stretch" Content="Изменить" FontFamily="Segoe Print" FontSize="16">
+            <Button.Style>
+                <Style TargetType="{x:Type Button}">
+                    <Setter Property="Background" Value="#FF501CDA"/>
+                    <Setter Property="Foreground" Value="Black"/>
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type Button}">
+                                <Border Background="{TemplateBinding Background}">
+                                    <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                </Border>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                    <Style.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="White"/>
+                            <Setter Property="Foreground" Value="#FF0F1480"/>
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+        </Button>
+        <Button Name="btnReady"  HorizontalAlignment="right" Grid.Row="5" Grid.ColumnSpan="2"  IsEnabled="False" Click="btnReady_Click" VerticalAlignment="Stretch" Content="Готово" FontFamily="Segoe Print" FontSize="16">
+            <Button.Style>
+                <Style TargetType="{x:Type Button}">
+                    <Setter Property="Background" Value="#FF501CDA"/>
+                    <Setter Property="Foreground" Value="Black"/>
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type Button}">
+                                <Border Background="{TemplateBinding Background}">
+                                    <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                </Border>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                    <Style.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="White"/>
+                            <Setter Property="Foreground" Value="#FF0F1480"/>
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+        </Button>
+
+
+
     </Grid>
 </Window>
