--- a/EventsManager/NewEventWindow.xaml
+++ b/EventsManager/NewEventWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EventsManager"
         mc:Ignorable="d"
-        Title="Новое событие" Height="450" Width="500" >
-    <Grid>
+        Title="Новое событие" Height="450" Width="600" >
+    <Grid Background="White">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="150"></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
@@ -18,20 +18,42 @@
             <RowDefinition Height="60"></RowDefinition>
             <RowDefinition></RowDefinition>
             <RowDefinition Height="60"></RowDefinition>
-            <RowDefinition Height="30"></RowDefinition>
+            <RowDefinition Height="50"></RowDefinition>
         </Grid.RowDefinitions>
-        <TextBlock Margin="10" HorizontalAlignment="Right" VerticalAlignment="Center" FontWeight="Bold" FontSize="16">Название:</TextBlock>
-        <TextBox TextWrapping="Wrap" Name="textBoxName" Grid.Column="1" Margin="10" HorizontalAlignment="Stretch" VerticalAlignment="Center"></TextBox>
-        <TextBlock Grid.Row="1" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Center" FontWeight="Bold" FontSize="16">Город и дата:</TextBlock>
-        <TextBox TextWrapping="Wrap" Name="textBoxLocation" Grid.Row="1" Grid.Column="1" Margin="10 10 120 10" HorizontalAlignment="Stretch"  VerticalAlignment="Center"></TextBox>
-        <TextBlock Grid.Row="2" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Center" FontWeight="Bold" FontSize="16">Цена:</TextBlock>
-        <TextBox TextWrapping="Wrap" Name="textBoxPrice" Grid.Row="2" Grid.Column="1" Margin="10" HorizontalAlignment="Stretch" VerticalAlignment="Center"></TextBox>
-        <TextBlock Grid.Row="3" Margin="0 15 10 0" HorizontalAlignment="Right"  FontWeight="Bold" FontSize="16">Описание:</TextBlock>
-        <TextBox ToolTip="Данное поле необязательно к заполнению." TextWrapping="Wrap" Name="textBoxDescription" Grid.Row="3" Grid.Column="1" Margin="10 15 10 10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"></TextBox>
-        <Button Name="btnAddNew" Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Width="100" Margin="5" HorizontalAlignment="Center" Click="btnAddNew_Click">Добавить</Button>
-        <TextBlock Margin="10" HorizontalAlignment="Right" VerticalAlignment="Center" FontWeight="Bold" FontSize="16"  Grid.Row="4">Категория</TextBlock>
-        <TextBox  Grid.Column="1" Grid.Row="4" TextWrapping="Wrap" Name="textBoxCategory" VerticalAlignment="Center" Margin="10 10 120 10" HorizontalAlignment="Stretch"></TextBox>
-        <ComboBox Name="comboBoxCategories" DisplayMemberPath="TypeCategory"  Grid.Column="1" Grid.Row="4" HorizontalAlignment="Right" Width="100" Height="20" Margin="10" ></ComboBox>
-        <DatePicker Name="datePicker" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="10" Grid.Column="1"></DatePicker>
+        <TextBlock Margin="10" HorizontalAlignment="Right" VerticalAlignment="Center" FontWeight="Bold" FontSize="16" FontFamily="Segoe Print" Foreground="#FF0F1480">Название:</TextBlock>
+        <TextBox TextWrapping="Wrap" Name="textBoxName" Grid.Column="1" Margin="10" HorizontalAlignment="Stretch" VerticalAlignment="Center" FontFamily="Segoe Print"></TextBox>
+        <TextBlock Grid.Row="1" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Center" FontWeight="Bold" FontSize="16" FontFamily="Segoe Print" Foreground="#FF0F1480">Город и дата:</TextBlock>
+        <TextBox TextWrapping="Wrap" Name="textBoxLocation" Grid.Row="1" Grid.Column="1" Margin="10,21,127,21" HorizontalAlignment="Stretch"  VerticalAlignment="Center" FontFamily="Segoe Print"></TextBox>
+        <TextBlock Grid.Row="2" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Center" FontWeight="Bold" FontSize="16" FontFamily="Segoe Print" Foreground="#FF0F1480">Цена:</TextBlock>
+        <TextBox TextWrapping="Wrap" Name="textBoxPrice" Grid.Row="2" Grid.Column="1" Margin="10" HorizontalAlignment="Stretch" VerticalAlignment="Center" FontFamily="Segoe Print"></TextBox>
+        <TextBlock Grid.Row="3" Margin="0 15 10 0" HorizontalAlignment="Right"  FontWeight="Bold" FontSize="16" FontFamily="Segoe Print" Foreground="#FF0F1480">Описание:</TextBlock>
+        <TextBox ToolTip="Данное поле необязательно к заполнению." TextWrapping="Wrap" Name="textBoxDescription" Grid.Row="3" Grid.Column="1" Margin="10 15 10 10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" FontFamily="Segoe Print"></TextBox>
+        <Button Name="btnAddNew" Height="50" Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Stretch" Click="btnAddNew_Click" Content="Добавить" FontFamily="Segoe Print" FontSize="16" Foreground="Black">
+            <Button.Style>
+                <Style TargetType="{x:Type Button}">
+                    <Setter Property="Background" Value="#FF501CDA"/>
+                    <Setter Property="Foreground" Value="Black"/>
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type Button}">
+                                <Border Background="{TemplateBinding Background}">
+                                    <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                </Border>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                    <Style.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="White"/>
+                            <Setter Property="Foreground" Value="#FF0F1480"/>
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+        </Button>
+        <TextBlock Margin="10" HorizontalAlignment="Right" VerticalAlignment="Center" FontWeight="Bold" FontSize="16"  Grid.Row="4" FontFamily="Segoe Print" Foreground="#FF0F1480"><Run Text="Категория"/><Run Text=":"/></TextBlock>
+        <TextBox  Grid.Column="1" Grid.Row="4" TextWrapping="Wrap" Name="textBoxCategory" VerticalAlignment="Center" Margin="10 10 160 10" HorizontalAlignment="Stretch" FontFamily="Segoe Print"></TextBox>
+        <ComboBox Name="comboBoxCategories" DisplayMemberPath="TypeCategory"  Grid.Column="1" Grid.Row="4" HorizontalAlignment="Right" Width="140" Height="25" Margin="10" FontFamily="Segoe Print" ></ComboBox>
+        <DatePicker Name="datePicker" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="10" Grid.Column="1" FontFamily="Segoe Print"></DatePicker>
     </Grid>
 </Window>
